--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2025. All Rights Reserved.'
+title: 拼郝铭's Homepage
+page-top-title: 拼郝铭
+top-section-bg-text: 毕业设计——Underwater Robot
+home-subtitle: PHM&ensp;|&ensp;拼郝铭
+copyright-text: '&copy; 拼郝铭 2025-2026. All Rights Reserved.'
