Second Attempt blog

--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: 拼郝铭's Homepage
 page-top-title: 拼郝铭
-top-section-bg-text: 毕业设计——Underwater Robot
-home-subtitle: PHM&ensp;|&ensp;拼郝铭
+top-section-bg-text: 毕业设计——Underwater Salvage  Robot
+home-subtitle: PHM&ensp;|&ensp;We Evolve
 copyright-text: '&copy; 拼郝铭 2025-2026. All Rights Reserved.'
